# gary

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  biome.jsonc  config.py  config.schema.yaml  config.yaml  engine-config-ui-plan.md  llm.py  logger.py  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  registry.py  scheduler.py  spec.py  vite.config.js  vite.config.ts  websocket.py
.github/workflows/: publish.yml
app/: SCHEMA_TEST_PORT.md  package.json  pnpm-lock.yaml  vite.config.js
app/src/: UI_PORT.md  app.html  global.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/api/: mod.rs  registry.rs  server.rs  ws.rs
app/src-tauri/src/api/v1/: game.rs  mod.rs  spec.rs  ws.rs
app/src-tauri/src/app/: commands.rs  config.rs  mod.rs  state.rs
app/src/lib/api/: registry.svelte.ts  registry.ts  ws.ts
app/src/lib/api/v1/: spec.ts
app/src/lib/app/: context.svelte.ts  context.ts  prefs.svelte.ts  scheduler.svelte.ts  server.svelte.ts  session.svelte.ts  theme.svelte.ts  updater.svelte.ts  utils.svelte.ts  utils.ts
app/src/lib/app/engines/: engine.ts  index.svelte.ts  index.ts  openrouter.ts  randy.svelte.ts  randy.ts  tony.ts
app/src/lib/app/schema-test/: actions.ts  client-game.ts  index.ts
app/src/lib/app/utils/: di.ts  hotkeys.svelte.ts  index.ts  reporting.ts  shiki.ts
app/src/lib/ui/: RadioButtons.svelte  ThemePicker.svelte  Tooltip.svelte
app/src/lib/ui/app/: ActionList.svelte  ConnectionsList.svelte  ContextLog.svelte  EngineConfig.svelte  EngineControls.svelte  EnginePicker.svelte  GameAction.svelte  GameActionList.svelte  GameTabs.svelte  GameTooltip.svelte  GaryDashboard.svelte  ManualSendDialog.svelte  OpenAIConfig.svelte  OpenRouterConfig.svelte  PowerButton.svelte  RandyConfig.svelte  RawMessageDialog.svelte  ServerConfig.svelte  ServerControls.svelte  SettingsDialog.svelte  UpdateDialog.svelte  VersionBadge.svelte  VersionChip.svelte  dialog-manager.svelte.ts  ui-state.svelte.ts
app/src/lib/ui/common/: CopyButton.svelte  Hotkey.svelte  OutLink.svelte  RadioButtons.svelte  TeachingTooltip.svelte  ThemePicker.svelte  Tooltip.svelte
app/src/routes/: +layout.svelte  +layout.ts  +page.svelte  global.css
app/src/routes/old/: +page.svelte
docs/: AGENT_REF.md  ARCHITECTURE.md  ROADMAP.md  neverthrow.md  svelte5.md
docs/llm-ref/: START.md  neverthrow.md  svelte5.md  writing.md
docs/roadmap/: TODO.md  context.md  event-log.md  events.md
gary/: app.py  llarry.py  llm.py  randy.py  registry.py  scheduler.py  spec.py
gary/llm/: llarry.py  llm.py  scheduler.py
gary/util/: __init__.py  config.py  logger.py  utils.py  websocket.py
gary/web/: __init__.py  log_handler.py  manager.py  manager_spec.py  spec.py
gary/web/views/: action.py
src/: app.html  global.css  schema_test.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: mod.rs  server.rs
src-tauri/src/app/: commands.rs  log.rs  state.rs
src/gary/: __main__.py  app.py  registry.py  spec.py
src/gary/llm/: __init__.py  events.py  idle_scheduler.py  llarry.py  llm.py  randy.py  scheduler.py  scheduler2.py
src/gary/util/: __init__.py  config.py  logger.py  periodic_timer.py  utils.py  websocket.py
src/gary/web/: ui.py
src/gary/web/views/: __init__.py  action.py  actions_list.py  context_log.py  game_tab.py  schema_form.py  schema_form_array.py  schema_form_base.py  schema_form_enum.py  schema_form_object.py  schema_form_primitive.py
src/gary/web/views/schema_form/: __init__.py  array.py  base.py  const.py  enum.py  object.py  primitive.py
src/lib/api/: client-game.ts  connection.ts  diagnostics.test.ts  diagnostics.ts  game-diagnostics.svelte.ts  game-diagnostics.test.ts  game.svelte.ts  helpers.test.ts  helpers.ts  registry.svelte.ts  registry.test.ts  ws.ts
src/lib/api/v1/: spec.ts
src/lib/app/: context.svelte.ts  context.test.ts  prefs.svelte.ts  prefs.test.ts  scheduler.svelte.test.ts  scheduler.svelte.ts  scheduler.test.ts  server.svelte.ts  session.svelte.ts  theme.svelte.ts  updater.svelte.ts
src/lib/app/diagnostics-example/: actions.ts  index.ts
src/lib/app/engines/: index.svelte.ts  randy.svelte.ts
src/lib/app/engines/llm/: index.svelte.ts  index.test.ts  index.ts  openai.svelte.test.ts  openai.svelte.ts  openrouter.svelte.ts
src/lib/app/events/: bus.ts  index.ts  log.svelte.ts  log.test.ts  sensitive.test.ts  sensitive.ts  ui.ts
src/lib/app/schema-test/: actions.ts  client-game.ts  index.ts
src/lib/app/utils/: bounded-toast.test.ts  bounded-toast.ts  default-map.ts  di.ts  index.test.ts  index.ts  json-schema-empty.test.ts  json-schema-empty.ts  json-schema-faker.svelte.ts  migrations.test.ts  migrations.ts  priority-queue.test.ts  priority-queue.ts  reporting.ts  state.svelte.ts  zod.ts
src/lib/testing/: index.ts  self-test-harness.test.ts  self-test-harness.ts
src/lib/ui/: events.ts
src/lib/ui/app/: DashboardSidebar.svelte  DiagnosticRow.svelte  DiagnosticsDialog.svelte  DialogHost.svelte  GaryDashboard.svelte  ManualSendDialog.svelte  PowerButton.svelte  RawMessageDialog.svelte  SafeModeDialog.svelte  ServerConfig.svelte  SettingsDialog.svelte  UpdateDialog.svelte  dialog-manager.svelte.ts  ui-state.svelte.ts
src/lib/ui/app/context/: ContextInput.svelte  ContextLog.svelte  ContextLogMenu.svelte  ContextMessage.svelte
src/lib/ui/app/engines/: EngineConfig.svelte  EngineControls.svelte  EnginePicker.svelte  OpenAIConfig.svelte  OpenRouterConfig.svelte  RandyConfig.svelte
src/lib/ui/common/: CodeMirror.svelte  CopyButton.svelte  Dialog.svelte  Hotkey.svelte  OutLink.svelte  Popover.svelte  RadioButtons.svelte  ShiftIndicator.svelte  Switch.svelte  TeachingTooltip.svelte  ThemePicker.svelte  Tooltip.svelte  VirtualLog.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/tests/: check_keywords.py  schema_test.py
src/tests/util/: __init__.py  connection.py  game.py
(+47 files in other folders)
