[project]
name = "gary"
version = "0.1.0"
description = "A testing implementation of the LLM side of the Neuro-sama Game SDK, based around the Guidance project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gpustat>=1.1.1",
    "guidance-stitch>=0.1.0",
    "guidance>=0.2.0",
    "llama-cpp-python>=0.3.4",
    "setuptools>=75.7.0",
    "fastapi[standard]>=0.115.6",
    "pydantic>=2.10.4",
    "websockets>=14.1",
    "colorlog>=6.9.0",
]

[tool.uv.sources]
llama-cpp-python = { index = "abetlen-cu124" }

[[tool.uv.index]]
name = "abetlen-cu124"
url = "https://abetlen.github.io/llama-cpp-python/whl/cu124/"
